--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -34,191 +34,174 @@ msgstr ""
 
 #: templates/about.html:65
 msgid "Aklis Haqida"
-msgstr ""
+msgstr "Об Аклисе"
 
 #: templates/about.html:74 templates/base.html:415
 msgid "Bog'lanish"
-msgstr ""
+msgstr "Связь"
 
 #: templates/about.html:100
 msgid "Nima Uchun"
-msgstr ""
+msgstr "Зачем"
 
 #: templates/about.html:102
 msgid "Ko'plab Insonlar"
-msgstr ""
+msgstr "Много людей"
 
 #: templates/about.html:102
 msgid "Bizni Tanlshmoqda"
-msgstr ""
+msgstr "Нас выбирают"
 
 #: templates/about.html:105
 msgid "Bizga Qo'ng'iroq qiling yoki Tashrif Buyuring"
-msgstr ""
+msgstr "Позвоните нам или запишитесь на визит"
 
 #: templates/about.html:106
-msgid ""
-"Biz 13 turdagi kukun mahsulotlari ishlab chiqarishga ixtisoslashganmiz, "
-"jumladan:"
-msgstr ""
+msgid "Biz 13 turdagi kukun mahsulotlari ishlab chiqarishga ixtisoslashganmiz,jumladan:"
+msgstr "Мы специализируемся на производстве 13 видов порошковой продукции, в том числе"
 
 #: templates/about.html:107
 msgid "Monoksid"
-msgstr ""
+msgstr "моноксид"
 
 #: templates/about.html:108
 msgid "Tripolifosfat natriy"
-msgstr ""
+msgstr "Триполифосфат натрий"
 
 #: templates/about.html:109
 msgid "Fermentlar"
-msgstr ""
+msgstr "Ферменты"
 
 #: templates/about.html:110
 msgid "Aromatik hidlar"
-msgstr ""
+msgstr "Ароматические ароматы"
 
 #: templates/about.html:112
 msgid "Asosiy xususiyatlari va foydalari"
-msgstr ""
+msgstr "Ключевые особенности и преимущества"
 
 #: templates/about.html:114
-msgid ""
-"Rangni himoya qilish: Turli xil rang-barang kiyimlarni ranglarning "
-"aralashuvidan qo'rqmasdan yuvish. Mahsulotimiz kiyimlaringizning "
-"yorqinligini saqlaydi"
-msgstr ""
+msgid "Rangni himoya qilish: Turli xil rang-barang kiyimlarni ranglarning aralashuvidan qo'rqmasdan yuvish. Mahsulotimiz kiyimlaringizning yorqinligini saqlaydi"
+msgstr "Защита цвета: стирайте одежду разных цветов, не опасаясь смешивания цветов. Наш продукт сохранит блеск вашей одежды"
 
 #: templates/about.html:115
-msgid ""
-"Tuklarni olib tashlash: Kiyimlaringizdagi tuklarni samarali olib tashlab, "
-"ularni yangi ko'rinishda saqlaydi"
-msgstr ""
+msgid "Tuklarni olib tashlash: Kiyimlaringizdagi tuklarni samarali olib tashlab, ularni yangi ko'rinishda saqlaydi"
+msgstr "Удаление ворса: эффективно удаляет ворс с вашей одежды и сохраняет ее новый вид."
 
 #: templates/about.html:116
-msgid ""
-"Rangni tiklash: Agar kiyimlaringiz rangi yo'qolgan bo'lsa, mahsulotimiz "
-"ularning asl rangini tiklashga yordam beradi"
-msgstr ""
+msgid "Rangni tiklash: Agar kiyimlaringiz rangi yo'qolgan bo'lsa, mahsulotimiz ularning asl rangini tiklashga yordam beradi"
+msgstr "Восстановление цвета: Если ваша одежда обесцветилась, наша продукция поможет восстановить ее первоначальный цвет."
 
 #: templates/about.html:117
-msgid ""
-"Ko'p maqsadli foydalanish: Gilamlarni yuvishda ham qo'llaniladi, "
-"mahsulotimiz gilamlar tolalarini tiklashga yordam beradi"
-msgstr ""
+msgid "Ko'p maqsadli foydalanish: Gilamlarni yuvishda ham qo'llaniladi,mahsulotimiz gilamlar tolalarini tiklashga yordam beradi"
+msgstr "Многоцелевое использование: наш продукт также используется при чистке ковров и помогает восстановить волокна ковра."
 
 #: templates/about.html:118
-msgid ""
-"Qulay qadoqlash: Mahsulotimiz zamok bilan yopilgan bo'lib, foydalanishda "
-"qulay va osondir"
-msgstr ""
+msgid "Qulay qadoqlash: Mahsulotimiz zamok bilan yopilgan bo'lib, foydalanishda qulay va osondir"
+msgstr "Удобная упаковка: наш товар застегивается на молнию, что удобно и просто в использовании."
 
 #: templates/about.html:121 templates/base.html:271 templates/base.html:285
 #: templates/base.html:405
 msgid "Aloqa"
-msgstr ""
+msgstr "Коммуникация"
 
 #: templates/about.html:167
 msgid "Jamoamiz Azolari"
-msgstr ""
+msgstr "Наша команда "
 
 #: templates/about.html:169
 msgid "Bizning Tajribali Va"
-msgstr ""
+msgstr "Наши опытные и"
 
 #: templates/about.html:169
 msgid "Kreativ Jamoamiz Azolari"
-msgstr ""
+msgstr "Члены нашей творческой команды"
 
 #: templates/base.html:126
 msgid "Tugatish"
-msgstr ""
+msgstr "заканчивать"
 
 #: templates/base.html:263 templates/base.html:400
 msgid "Asosiy"
-msgstr ""
+msgstr "Основной"
 
 #: templates/base.html:266 templates/base.html:403
 msgid "Biz Haqimizda"
-msgstr ""
+msgstr "О нас"
 
 #: templates/base.html:376
 #, python-format
-msgid ""
-"Mahsulotimiz barcha turdagi kir yuvish mashinalari bilan mos keladi va "
-"qo'lda yuvish uchun ham ishlatilishi mumkin. Xavfsizlik 100%% tasdiqlangan, "
-"shuning uchun u tanangizga yoki qo'llaringizga ta'sir qilmaydi va "
-"kasalliklarga olib kelmaydi"
-msgstr ""
+msgid "Mahsulotimiz barcha turdagi kir yuvish mashinalari bilan mos keladi va qo'lda yuvish uchun ham ishlatilishi mumkin. Xavfsizlik 100%% tasdiqlangan,shuning uchun u tanangizga yoki qo'llaringizga ta'sir qilmaydi va kasalliklarga olib kelmaydi"
+msgstr "Наш продукт совместим со всеми типами стиральных машин, а также может использоваться для ручной стирки. Подтверждена 100% безопасность, поэтому он не повлияет на ваше тело или руки и не вызовет заболеваний."
 
 #: templates/base.html:396
 msgid "Xizmatlar"
-msgstr ""
+msgstr "Услуги"
 
 #: templates/contact.html:42
 msgid "Axborotlar"
-msgstr ""
+msgstr "Информация"
 
 #: templates/contact.html:44
 msgid "Bizning Zavodimizga Tashrif Buyuring yoki"
-msgstr ""
+msgstr "Закажите посещение нашей фабрики или"
 
 #: templates/contact.html:44
 msgid "Biz Bilan Bugun Bog'laning"
-msgstr ""
+msgstr "Свяжитесь с нами сегодня"
 
 #: templates/contact.html:54
 msgid "Bizning Manzilimiz"
-msgstr ""
+msgstr "Наш адрес"
 
 #: templates/contact.html:67
 msgid "Bizning Pochtamiz"
-msgstr ""
+msgstr "Наша почта"
 
 #: templates/contact.html:81
 msgid "Qo'ng'iroq"
-msgstr ""
+msgstr "Вызов"
 
 #: templates/contact.html:100
 msgid "Ma'lumotlar"
-msgstr ""
+msgstr "Информация"
 
 #: templates/contact.html:102
 msgid "Bizga Xabar Yuboring "
-msgstr ""
+msgstr "Отправьте нам сообщение"
 
 #: templates/contact.html:140
 msgid "Jonatish"
-msgstr ""
+msgstr "Джонатан"
 
 #: templates/index.html:102 templates/index.html:228
 msgid "Bizning Mahsulotlarimiz"
-msgstr ""
+msgstr "Наши продукты"
 
 #: templates/index.html:104
 msgid "SUPER Aklis: Kafolatlangan sifatli porlash"
-msgstr ""
+msgstr "SUPER Aklis: гарантированный качественный блеск"
 
 #: templates/index.html:124 templates/index.html:151 templates/index.html:177
 #: templates/index.html:203
 msgid "Xarid Qiling"
-msgstr ""
+msgstr "Купить"
 
 #: templates/index.html:230
 msgid "Bizning Barcha Mahsulotlarimiz"
-msgstr ""
+msgstr "Все наши продукты"
 
 #: templates/index.html:230
 msgid "Mahsulotlar"
-msgstr ""
+msgstr "Продукты"
 
 #: templates/index.html:230
 msgid "Bo'limida"
-msgstr ""
+msgstr "в отделе"
 
 #: templates/index.html:248 templates/product.html:98
 msgid "Buyurtma Berish"
-msgstr ""
+msgstr "Разместить заказ"
 
 #: venv/lib/python3.12/site-packages/django/contrib/messages/apps.py:16
 msgid "Messages"
