--- a/locale/uz/LC_MESSAGES/django.po
+++ b/locale/uz/LC_MESSAGES/django.po
@@ -32,191 +32,174 @@ msgstr ""
 
 #: templates/about.html:65
 msgid "Aklis Haqida"
-msgstr ""
+msgstr "Aklis Haqida"
 
 #: templates/about.html:74 templates/base.html:415
 msgid "Bog'lanish"
-msgstr ""
+msgstr "Bog'lanish"
 
 #: templates/about.html:100
 msgid "Nima Uchun"
-msgstr ""
+msgstr "Nima Uchun"
 
 #: templates/about.html:102
 msgid "Ko'plab Insonlar"
-msgstr ""
+msgstr "Ko'plab Insonlar"
 
 #: templates/about.html:102
 msgid "Bizni Tanlshmoqda"
-msgstr ""
+msgstr "Bizni Tanlshmoqda"
 
 #: templates/about.html:105
 msgid "Bizga Qo'ng'iroq qiling yoki Tashrif Buyuring"
-msgstr ""
+msgstr "Bizga Qo'ng'iroq qiling yoki Tashrif Buyuring"
 
 #: templates/about.html:106
-msgid ""
-"Biz 13 turdagi kukun mahsulotlari ishlab chiqarishga ixtisoslashganmiz, "
-"jumladan:"
-msgstr ""
+msgid "Biz 13 turdagi kukun mahsulotlari ishlab chiqarishga ixtisoslashganmiz,jumladan:"
+msgstr "Biz 13 turdagi kukun mahsulotlari ishlab chiqarishga ixtisoslashganmiz,jumladan:"
 
 #: templates/about.html:107
 msgid "Monoksid"
-msgstr ""
+msgstr "Monoksid"
 
 #: templates/about.html:108
 msgid "Tripolifosfat natriy"
-msgstr ""
+msgstr "Tripolifosfat natriy"
 
 #: templates/about.html:109
 msgid "Fermentlar"
-msgstr ""
+msgstr "Fermentlar"
 
 #: templates/about.html:110
 msgid "Aromatik hidlar"
-msgstr ""
+msgstr "Aromatik hidlar"
 
 #: templates/about.html:112
 msgid "Asosiy xususiyatlari va foydalari"
-msgstr ""
+msgstr "Asosiy xususiyatlari va foydalari"
 
 #: templates/about.html:114
-msgid ""
-"Rangni himoya qilish: Turli xil rang-barang kiyimlarni ranglarning "
-"aralashuvidan qo'rqmasdan yuvish. Mahsulotimiz kiyimlaringizning "
-"yorqinligini saqlaydi"
-msgstr ""
+msgid "Rangni himoya qilish: Turli xil rang-barang kiyimlarni ranglarning aralashuvidan qo'rqmasdan yuvish. Mahsulotimiz kiyimlaringizning yorqinligini saqlaydi"
+msgstr "Rangni himoya qilish: Turli xil rang-barang kiyimlarni ranglarning aralashuvidan qo'rqmasdan yuvish. Mahsulotimiz kiyimlaringizning yorqinligini saqlaydi"
 
 #: templates/about.html:115
-msgid ""
-"Tuklarni olib tashlash: Kiyimlaringizdagi tuklarni samarali olib tashlab, "
-"ularni yangi ko'rinishda saqlaydi"
-msgstr ""
+msgid "Tuklarni olib tashlash: Kiyimlaringizdagi tuklarni samarali olib tashlab,ularni yangi ko'rinishda saqlaydi"
+msgstr "Tuklarni olib tashlash: Kiyimlaringizdagi tuklarni samarali olib tashlab,ularni yangi ko'rinishda saqlaydi"
 
 #: templates/about.html:116
-msgid ""
-"Rangni tiklash: Agar kiyimlaringiz rangi yo'qolgan bo'lsa, mahsulotimiz "
-"ularning asl rangini tiklashga yordam beradi"
-msgstr ""
+msgid "Rangni tiklash: Agar kiyimlaringiz rangi yo'qolgan bo'lsa, mahsulotimiz ularning asl rangini tiklashga yordam beradi"
+msgstr "Rangni tiklash: Agar kiyimlaringiz rangi yo'qolgan bo'lsa, mahsulotimiz ularning asl rangini tiklashga yordam beradi"
 
 #: templates/about.html:117
-msgid ""
-"Ko'p maqsadli foydalanish: Gilamlarni yuvishda ham qo'llaniladi, "
-"mahsulotimiz gilamlar tolalarini tiklashga yordam beradi"
-msgstr ""
+msgid "Ko'p maqsadli foydalanish: Gilamlarni yuvishda ham qo'llaniladi,mahsulotimiz gilamlar tolalarini tiklashga yordam beradi"
+msgstr "Ko'p maqsadli foydalanish: Gilamlarni yuvishda ham qo'llaniladi,mahsulotimiz gilamlar tolalarini tiklashga yordam beradi"
 
 #: templates/about.html:118
-msgid ""
-"Qulay qadoqlash: Mahsulotimiz zamok bilan yopilgan bo'lib, foydalanishda "
-"qulay va osondir"
-msgstr ""
+msgid "Qulay qadoqlash: Mahsulotimiz zamok bilan yopilgan bo'lib, foydalanishda qulay va osondir"
+msgstr "Qulay qadoqlash: Mahsulotimiz zamok bilan yopilgan bo'lib, foydalanishda qulay va osondir"
 
 #: templates/about.html:121 templates/base.html:271 templates/base.html:285
 #: templates/base.html:405
 msgid "Aloqa"
-msgstr ""
+msgstr "Aloqa"
 
 #: templates/about.html:167
 msgid "Jamoamiz Azolari"
-msgstr ""
+msgstr "Jamoamiz Azolari"
 
 #: templates/about.html:169
 msgid "Bizning Tajribali Va"
-msgstr ""
+msgstr "Bizning Tajribali Va"
 
 #: templates/about.html:169
 msgid "Kreativ Jamoamiz Azolari"
-msgstr ""
+msgstr "Kreativ Jamoamiz Azolari"
 
 #: templates/base.html:126
 msgid "Tugatish"
-msgstr ""
+msgstr "Tugatish"
 
 #: templates/base.html:263 templates/base.html:400
 msgid "Asosiy"
-msgstr ""
+msgstr "Asosiy"
 
 #: templates/base.html:266 templates/base.html:403
 msgid "Biz Haqimizda"
-msgstr ""
+msgstr "Biz Haqimizda"
 
 #: templates/base.html:376
 #, python-format
-msgid ""
-"Mahsulotimiz barcha turdagi kir yuvish mashinalari bilan mos keladi va "
-"qo'lda yuvish uchun ham ishlatilishi mumkin. Xavfsizlik 100%% tasdiqlangan, "
-"shuning uchun u tanangizga yoki qo'llaringizga ta'sir qilmaydi va "
-"kasalliklarga olib kelmaydi"
-msgstr ""
+msgid "Mahsulotimiz barcha turdagi kir yuvish mashinalari bilan mos keladi va qo'lda yuvish uchun ham ishlatilishi mumkin. Xavfsizlik 100%% tasdiqlangan,shuning uchun u tanangizga yoki qo'llaringizga ta'sir qilmaydi va kasalliklarga olib kelmaydi"
+msgstr "Mahsulotimiz barcha turdagi kir yuvish mashinalari bilan mos keladi va qo'lda yuvish uchun ham ishlatilishi mumkin. Xavfsizlik 100%% tasdiqlangan,shuning uchun u tanangizga yoki qo'llaringizga ta'sir qilmaydi va kasalliklarga olib kelmaydi"
 
 #: templates/base.html:396
 msgid "Xizmatlar"
-msgstr ""
+msgstr "Xizmatlar"
 
 #: templates/contact.html:42
 msgid "Axborotlar"
-msgstr ""
+msgstr "Axborotlar"
 
 #: templates/contact.html:44
 msgid "Bizning Zavodimizga Tashrif Buyuring yoki"
-msgstr ""
+msgstr "Bizning Zavodimizga Tashrif Buyuring yoki"
 
 #: templates/contact.html:44
 msgid "Biz Bilan Bugun Bog'laning"
-msgstr ""
+msgstr "Biz Bilan Bugun Bog'laning"
 
 #: templates/contact.html:54
 msgid "Bizning Manzilimiz"
-msgstr ""
+msgstr "Bizning Manzilimiz"
 
 #: templates/contact.html:67
 msgid "Bizning Pochtamiz"
-msgstr ""
+msgstr "Bizning Pochtamiz"
 
 #: templates/contact.html:81
 msgid "Qo'ng'iroq"
-msgstr ""
+msgstr "Qo'ng'iroq"
 
 #: templates/contact.html:100
 msgid "Ma'lumotlar"
-msgstr ""
+msgstr "Ma'lumotlar"
 
 #: templates/contact.html:102
 msgid "Bizga Xabar Yuboring "
-msgstr ""
+msgstr "Bizga Xabar Yuboring"
 
 #: templates/contact.html:140
 msgid "Jonatish"
-msgstr ""
+msgstr "Jonatish"
 
 #: templates/index.html:102 templates/index.html:228
 msgid "Bizning Mahsulotlarimiz"
-msgstr ""
+msgstr "Bizning Mahsulotlarimiz"
 
 #: templates/index.html:104
 msgid "SUPER Aklis: Kafolatlangan sifatli porlash"
-msgstr ""
+msgstr "SUPER Aklis: Kafolatlangan sifatli porlash"
 
 #: templates/index.html:124 templates/index.html:151 templates/index.html:177
 #: templates/index.html:203
 msgid "Xarid Qiling"
-msgstr ""
+msgstr "Xarid Qiling"
 
 #: templates/index.html:230
 msgid "Bizning Barcha Mahsulotlarimiz"
-msgstr ""
+msgstr "Bizning Barcha Mahsulotlarimiz"
 
 #: templates/index.html:230
 msgid "Mahsulotlar"
-msgstr ""
+msgstr "Mahsulotlar"
 
 #: templates/index.html:230
 msgid "Bo'limida"
-msgstr ""
+msgstr "Bo'limida"
 
 #: templates/index.html:248 templates/product.html:98
 msgid "Buyurtma Berish"
-msgstr ""
+msgstr "Buyurtma Berish"
 
 #: venv/lib/python3.12/site-packages/django/contrib/messages/apps.py:16
 msgid "Messages"
